# ChangeLog for app-text/gv
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/gv/ChangeLog,v 1.47 2006/04/02 10:27:14 genstef Exp $

  02 Apr 2006; Stefan Schweizer <genstef@gentoo.org>
  -files/gv-3.5.8-antialias.patch, -files/gv-3.5.8-r2-gentoo.diff,
  -files/gv-3.5.8-setenv.diff, -files/gv-3.6.1-scrollbar.patch,
  -files/3.5.8-gcc3.patch, -gv-3.5.8-r4.ebuild, -gv-3.6.1.ebuild,
  -gv-3.6.1-r1.ebuild:
  remove old

  02 Apr 2006; Bryan Østergaard <kloeri@gentoo.org gv-3.6.1-r2.ebuild:
  Stable on alpha, bug 127641.

  01 Apr 2006; Patrick McLean <chutzpah@gentoo.org> gv-3.6.1-r2.ebuild:
  Stable on amd64 (bug #127641)

  29 Mar 2006; Markus Rothe <corsair@gentoo.org> gv-3.6.1-r2.ebuild:
  Stable on ppc64; bug #127641

  29 Mar 2006; <nixnut@gentoo.org> gv-3.6.1-r2.ebuild:
  Stable on ppc. Bug #127641

  29 Mar 2006; Mark Loeser <halcy0n@gentoo.org> gv-3.6.1-r2.ebuild:
  Stable on x86; bug #127641

  28 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> gv-3.6.1-r2.ebuild:
  Stable on sparc wrt #127641

*gv-3.6.1-r2 (06 Feb 2006)

  06 Feb 2006; Stefan Schweizer <genstef@gentoo.org> +gv-3.6.1-r2.ebuild:
  Add patches from debian

  28 Jan 2006; Simon Stelling <blubb@gentoo.org>
  -files/gv-3.5.8-debian.diff.gz, gv-3.5.8-r4.ebuild:
  move compressed patches to the mirrors

  03 Jan 2006; Stefan Schweizer <genstef@gentoo.org> gv-3.5.8-r4.ebuild,
  gv-3.6.1.ebuild, gv-3.6.1-r1.ebuild:
  modular X depends thanks to Rohan McGovern <rohan.pm@gmail.com> in bug 117524

  30 Nov 2005; Tom Gall <tgall@gentoo.org> gv-3.5.8-r4.ebuild:
  stable on ppc64

*gv-3.6.1-r1 (03 Nov 2005)

  03 Nov 2005; Luis Medinas <metalgod@gentoo.org>
  +files/gv-3.6.1-scrollbar.patch, gv-3.5.8-r4.ebuild, gv-3.6.1.ebuild,
  +gv-3.6.1-r1.ebuild:
  Added a patch to fix scrollbar bug and added a better description thanks to
  Ulrich Mueller <ulm@kph.uni-mainz.de> closes bug #111024 and #111114.

*gv-3.6.1 (07 Jun 2005)
