@@ -1,9 +1,9 @@
-MD5 8a839cbec96a49780785a0f1469cc7b3 ChangeLog 5684
-RMD160 986e610246af630084759c9b92b07c3204eea7f2 ChangeLog 5684
-SHA256 b7adffb66f1880e9050c6026f44156802439e13b38604016a19ae0f83b779751 ChangeLog 5684
-MD5 033a6aae1f6c429fbb5bdc60a8acafa2 files/digest-gv-3.6.1-r2 461
-RMD160 641d5f72d81664a6f2e92c5d09e18c6c7868526b files/digest-gv-3.6.1-r2 461
-SHA256 0f2e044da716931b46dfd338afb7d9ce427e07048413f0c52b9c025edb5e0989 files/digest-gv-3.6.1-r2 461
+MD5 d75edc8997ab9c08f51ee7a3685222af ChangeLog 6012
+RMD160 3d446e07d902028ed478263a259bcf852b7a7924 ChangeLog 6012
+SHA256 f062dc5f72b5e19f4b1aad49967cfd5a91445e748ed6b30e3e06354da66f7850 ChangeLog 6012
+MD5 033a6aae1f6c429fbb5bdc60a8acafa2 files/digest-gv-3.6.1-r3 461
+RMD160 641d5f72d81664a6f2e92c5d09e18c6c7868526b files/digest-gv-3.6.1-r3 461
+SHA256 0f2e044da716931b46dfd338afb7d9ce427e07048413f0c52b9c025edb5e0989 files/digest-gv-3.6.1-r3 461
 MD5 cdda43ebb8ee0fa1525767cd36b0aa81 files/gv-3.6.1-a0.patch 2429
 RMD160 a5f563ed40cab27a2e512df15a12cb6b68156afd files/gv-3.6.1-a0.patch 2429
 SHA256 c63430027c130b10fb60a1f1a6268010cc20d371a6984b52e0762bedfda32479 files/gv-3.6.1-a0.patch 2429
@@ -13,9 +13,9 @@ SHA256 774715b5a4f9e2d4114e49313c0c60e5cf9e05fa1f48c086e7c230e851b05b89 files/gv
 MD5 8d217b566c2eeae39312f35d950610bb files/gv-3.6.1-setenv.patch 378
 RMD160 c616fb1b0b50f14e2b3783755cbc87ade85f5541 files/gv-3.6.1-setenv.patch 378
 SHA256 6456009404d6c0d75f314901dece2c0ee33a0c45ab451c68aec1e31e9601ab68 files/gv-3.6.1-setenv.patch 378
-MD5 2d7f20c462b0c9fa1d5351a848d4e5b7 gv-3.6.1-r2.ebuild 1204
-RMD160 05ca3d8f881919c1f8dcd4d8a9bcfbed05491e30 gv-3.6.1-r2.ebuild 1204
-SHA256 30ff3f1ab24b9aec910606c1447c68506d2886f117fdddcd98a9bd7ce0fadad0 gv-3.6.1-r2.ebuild 1204
+MD5 1ec5a6a71ed847cfad73f3128d005337 gv-3.6.1-r3.ebuild 1306
+RMD160 3d9eaf0b1112e0ec32e5babfa0bb969f7e90f2fa gv-3.6.1-r3.ebuild 1306
+SHA256 29fd78b2a84f65be72ef524d32560e1e9a609ace6a2d11c6d9455e1bcfad5f43 gv-3.6.1-r3.ebuild 1306
 MD5 26b4b081d538c195dc39bcb2ec8e6f3a metadata.xml 161
 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 metadata.xml 161
 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76 metadata.xml 161
