@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gv/gv-3.6.1-r2.ebuild,v 1.8 2006/04/02 10:23:37 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gv/gv-3.6.1-r3.ebuild,v 1.1 2006/04/10 14:08:25 genstef Exp $
 
 inherit eutils
 
@@ -43,6 +43,11 @@ src_unpack() {
 	epatch ${FILESDIR}/${P}-a0.patch
 	epatch ${WORKDIR}/gv_3.6.1-13.diff
 	epatch ${P}/debian/patches/*.dpatch
+}
+
+src_compile() {
+	econf --enable-scrollbar-code || die "econf failed"
+	emake || die "emake failed"
 }
 
 src_install() {
